# WASMnism

./: .cursorrules  .env.example  .gitignore  Makefile  README.md
.cursor/rules/: plan-format.mdc
bench/: build-scorecard.py  cache-hit.js  cached-hit.js  clip-rules-only.js  cold-ml.js  cold-start.js  compute-medians.py  concurrency-ladder-full.js  concurrency-ladder.js  consistency.js  constant-50vu.js  dual-origin-scorecard.py  full-pipeline.js  full-proxy.js  gateway-only.js  generate-charts.py  inject-charts.py  mixed-load.js  moderation-validation.js  policy-only.js  quick-compare.js  reproduce.sh  run-7x.sh  run-benchmark.sh  run-comparison.sh  run-full-suite.sh  run-multiregion.sh  run-peak-50vu-remote.sh  run-suite.sh  run-tier2-multiregion.sh  run-validation.sh  soak-500vu.js  spike-2000vu.js  tier2-suite.sh  validate-results.py  warm-heavy.js  warm-light.js  warm-ml.js  warm-policy.js
blog/: wasm-edge-firewall-benchmark.md
cost/: analyze-tier1-costs.py  cost-config.example.yaml  cost-model.md
deploy/: gcp-runner-setup.sh  inference-setup.sh  k6-runner-setup.sh
deploy/linode/: deploy.sh  gateway-native.service
docs/: ARCHITECTURE.md  BENCHMARK_ROLLOUT_PLAN.md  COST_ANALYSIS_GUIDE.md  MODERATION_GUIDE.md  REPRODUCE.md  TODO_DYNAMIC_REGION.md  benchmark_contract.md  benchmark_contract_tier2.md  benchmark_rollout_plan_public_stub.md
edge-gateway/: Cargo.toml  Makefile
edge-gateway/adapters/fastly/: Cargo.toml  fastly.toml
edge-gateway/adapters/fastly/src/: main.rs
edge-gateway/adapters/lambda/: Cargo.toml
edge-gateway/adapters/lambda/src/: main.rs
edge-gateway/adapters/native/: Cargo.toml  Dockerfile
edge-gateway/adapters/native/src/: main.rs
edge-gateway/adapters/spin/: Cargo.toml  spin.toml
edge-gateway/adapters/spin/src/: lib.rs
edge-gateway/adapters/workers/: Cargo.toml  wrangler.toml
edge-gateway/adapters/workers/src/: lib.rs
edge-gateway/core/: Cargo.toml
edge-gateway/core/src/: cache.rs  handlers.rs  hash.rs  lib.rs  normalize.rs  pipeline.rs  policy.rs  timing.rs  tokenizer.rs  toxicity.rs
edge-gateway/models/: README.md
edge-gateway/tools/convert-to-nnef/: Cargo.toml
edge-gateway/tools/convert-to-nnef/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: PromptTester.svelte  ResultPanel.svelte
frontend/src/lib/: api.js
