[package]
name = "clipclap-gateway-core"
version = "0.2.0"
edition = "2021"

[features]
default = []
ml = ["tract-onnx", "tract-nnef", "tract-onnx-opl"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
aho-corasick = "1"
unicode-normalization = "0.1"
regex = "1"
tract-onnx = { version = "0.22", optional = true }
tract-nnef = { version = "0.22", optional = true }
tract-onnx-opl = { version = "0.22", optional = true }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
js-sys = "0.3"
