[package]
name = "clipclap-gateway-fastly"
version = "0.1.0"
edition = "2021"

[dependencies]
clipclap-gateway-core = { path = "../../core", default-features = false }
fastly = "0.11"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
