[package]
name = "clipclap-gateway-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway-native"
path = "src/main.rs"

[dependencies]
clipclap-gateway-core = { path = "../../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
