[package]
name = "clipclap-gateway-spin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clipclap-gateway-core = { path = "../../core" }
spin-sdk = "5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
